# vika_ok

./: .aider.chat.history.md  .aider.input.history  .coderabbit.yaml  .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  CODE_REVIEW_REPORT.md  Dockerfile  FIXES_APPLIED.md  PROGRESS.md  README.md  START_HERE.md  agent.py  agent_desktop.py  agent_mobile.py  agent_rag.py  check_bot.sh  control_api.py  docker-compose.yml  examples.py  github_analyzer.py  improved_research.py  init_qdrant.py  local_analyzer.py  my_engine_agent.py  proactive_study.py  push_dev.bat  push_prod.bat  pyproject.toml  qdrant_manager.py  quick_test.py  requirements.txt  run.bat  run.py  search_helper.py  signal_bot_vika.py  signal_bridge.py  (+6 more)
.aider.tags.cache.v4/: cache.db-shm  cache.db-wal
desktop/: .env.example  .gitignore  Modelfile  README.md  TODO.md  agent.py  run.bat
desktop/finetuning/: Modelfile.ft  README.md  dataset.jsonl  setup.bat  train.py
docs/: 00_PHASE_3_START_HERE.md  DOCKER_INSTALL_WINDOWS_GUIDE.md  FINAL_BATTLE_REPORT_SUMMARY.md  FINAL_REPORT_PHASE_3.md  FINAL_STRATEGIC_REPORT_PHASE_3.md  GITHUB_ANALYZER_GUIDE.md  GITHUB_REPO_ANALYSIS.md  PHASE_3_MASTER_PLAN.md  QDRANT_SETUP_GUIDE.md  SIGNAL_BOT_GUIDE.md
src/: __init__.py
src/core/: agent.py  config.py  history.py  llm.py
src/handlers/: __init__.py  telegram.py
src/services/: health.py  opencode.py  rag.py  search.py  ssh.py  tasks.py  tool_defs.py  tools.py
